package com.deloitte.training.oodesignpatterns.structural.bridge;

public interface Color {
    
    String applyColor();
    
}
