package com.deloitte.training.oodesignpatterns.structural.bridge;

public class GreenColor implements Color {

    @Override
    public String applyColor() {
        return "GREEN color.";
    }
    
}
