package com.deloitte.training.oodesignpatterns.structural.bridge;

public class RedColor implements Color {

    @Override
    public String applyColor() {
        return "RED color.";
    }
    
}
